--- a/pepeizqs deals web/Pages/Componentes/Cuenta/Isthereanydeal.razor
+++ b/pepeizqs deals web/Pages/Componentes/Cuenta/Isthereanydeal.razor
@@ -3,6 +3,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Identity
 @using System.Text.Json
+@using global::Juegos
 @using pepeizqs_deals_web.Areas.Identity.Data
 
 @inject UserManager<Usuario> UserManager
